# nhl_inky

./: README.md  README_GOAL_NOTIFIER.md  goal_notifier.py  nhl_client.py  nhl_inky_display.py  pyproject.toml  requirements.txt
