[project]
name = "nhl"
version = "0.1.0"
description = "NHL Scores and Schedule Client for Raspberry Pi Zero"
readme = "README.md"
requires-python = ">=3.7,<3.15"
dependencies = [
    "requests>=2.25.0",
    "pytz>=2021.1; python_version < '3.9'",
    "pillow>=8.0.0,<11.0.0",
]

[project.optional-dependencies]
rpi = [
    "inky>=1.5.0",
    "spidev>=3.5",
    "RPi.GPIO>=0.7.0",
    "smbus2>=0.4.0",
]
