[project]
name = "nhl"
version = "0.1.0"
description = "NHL Scores and Schedule Client for Raspberry Pi Zero"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.25.0",
    "pillow>=11.0.0,<12.0.0",
]

[project.optional-dependencies]
rpi = [
    "inky==2.2.1",
    "spidev==3.6",
    "smbus2==0.4.3",
    "gpiod>=2.2.0",
]
