[project]
name = "nhl"
version = "0.1.0"
description = "NHL Scores and Schedule Client for Raspberry Pi Zero"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
rpi = [
    "inky==2.2.1",
]

[tool.uv]
exclude-newer = "2024-12-01T00:00:00Z"
